--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,27 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  transition:scroll-behaviour 0.3s ease-out;
+  scroll-behavior: smooth !important;
 }
+*::-webkit-scrollbar{
+  width: 0;
 
+}
+a{
+  color: grey;
+  text-decoration: none;
+  font-weight: bold;
+}
+button{
+  cursor: pointer;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
