--- a/src/Components/Style/home.css
+++ b/src/Components/Style/home.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
 height: 100vh;
 padding:0 2.5rem;
+margin-top: 1rem;
 }
 .landing-container >div{
     width: 50%;
@@ -44,4 +45,20 @@ gap: 1rem;
     height: 60%;
     border-radius: 40%;
     transition: all 1.5s;
+}
+
+@media screen and (max-width:625px) {
+    .landing-container{
+        flex-direction: column-reverse;
+        align-items: center;
+        padding: 0;
+        justify-content: center;
+        gap: 0.5rem;
+    }
+    .landing-container>div{
+        width: 100%;
+    }
+    .right-landing-container img{
+        height: 82%;
+    }
 }
