--- a/src/Components/Style/projectcard.css
+++ b/src/Components/Style/projectcard.css
@@ -3,7 +3,19 @@
     flex-direction: column;
     gap: 1rem;
     transition: all 4s;
+    flex-basis: 20%;
 }
 .project-card-item img{
     width: 100%;
+}
+
+@media screen and (max-width: 700px) {
+    .project-card-item{
+        flex-basis: 40%;
+    }
+}
+@media screen and (max-width:475px) {
+    .project-card-item{
+        flex-basis: 100%;
+    }
 }
