--- a/src/Components/Style/project.css
+++ b/src/Components/Style/project.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     gap: 1.5rem;
     text-align: center;
-    color: brown;
+    color: #687EFF;
     font-weight: bolder;
     padding: 1rem 4rem;
     transition: all 3s;
