--- a/src/Components/Style/header.css
+++ b/src/Components/Style/header.css
@@ -1,48 +1,56 @@
-
 .navbar {
-    /* Your navbar styles */
-    display: flex;
-    justify-content: space-between;
-    padding: 1.2rem 3rem;
-    background-color: 
-    rgb(254, 78, 78);
-    align-items: center;
-    color: white;
-    font-weight: bolder;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    transition: top 0.3s;
-    z-index: 333;
-  }
-  
-  .navbar--hidden {
-    top: -100px; /* Adjust as per your navbar height */
-  }
-  
-
-
-
-.header-name{
-    color: antiquewhite;
+  display: flex;
+  justify-content: space-between;
+  padding: 1.2rem 2rem;
+  background-color: #2e073fb7;
+  align-items: center;
+  font-weight: bolder;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: top 0.3s;
+  z-index: 333;
 }
-.nav{
-    display: flex;
-    gap: 1.5rem;
+.header-name a {
+  color: #ebd3f8;
+  font-size: large;
 }
-.nav a{
-    padding: 0.8rem;
-    color: rgb(255, 255, 255);
-text-decoration: none;
-border-radius: 42px;
-background: rgb(244, 110, 110);
-box-shadow:  -5px 8px 15px brown,
-             5px 5px 15px brown;
+.header-name h2 {
+  font-family: "Pacifico", cursive;
+  letter-spacing: 2px;
+}
+.header-name h2 span {
+  color: red;
+  font-family: "Pacifico", cursive;
+}
+.navbar--hidden {
+  top: -100px;
 }
 
-@media screen and (max-width:750px) {
-  .nav{
+.nav {
+  display: flex;
+  gap: 1.5rem;
+}
+.nav a {
+  padding: 0.8rem;
+  color: #caf4ff;
+  text-decoration: none;
+}
+.nav a:active,
+.nav a:focus,
+.hire-button a:focus {
+  color: green;
+}
+.hire-button a {
+  color: #caf4ff;
+}
+.nav a:hover,
+.hire-button a:hover {
+  color: #5ab2ff;
+}
+@media screen and (max-width: 750px) {
+  .nav {
     display: none;
   }
 }
