--- a/src/Components/Style/skills.css
+++ b/src/Components/Style/skills.css
@@ -1,8 +1,31 @@
 .skill-container{
     width: 100vw;
-    height: 100vh;
+    height: 65vh;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     padding: 2rem 0;
+    gap: 1.5rem;
+    color: #5A72A0;
+}
+.skills-svg{
+    background: linear-gradient(90deg, #3F2B96 0%, #A8C0FF 100%);
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.skills-svg svg{
+    width: 100%;
+    transform: scale(1.2);
+}
+
+@media screen and (max-width: 600px) {
+    .skills-svg{
+        max-height: 300px;
+    }
+    .skills-svg svg{
+        transform: scale(1.55);
+    }
 }
