--- a/src/Components/Style/main.css
+++ b/src/Components/Style/main.css
@@ -1,10 +1,8 @@
 .main{
-    /* background-color: #EBD3F8; */
-    background-color: whitesmoke;
+    background-color: white;
     transition: all 2s ease-in-out;
     animation: render 2s ease-out;
     scroll-behavior: smooth;
-   
 }
 @keyframes render {
     0%{
