--- a/src/Components/Style/header.css
+++ b/src/Components/Style/header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   padding: 1.2rem 2rem;
-  background-color: #2e073fb7;
+  background-color: #2e073f;
   align-items: center;
   font-weight: bolder;
   position: fixed;
